# acvm-simulator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-wasm  build.rs  buildPhaseCargoCommand.sh  cspell.json  flake.nix  installPhase.sh  package.json  web-test-runner.config.mjs
.direnv/: flake-profile-1-link
.github/actions/setup/: action.yml
.github/workflows/: browser.yml  build-test.yml  nix-checks.yml  node.yml  release.yml  rust.yml  test.yml  typescript.yml
src/: abi.rs  barretenberg.rs  barretenberg_structures.rs  blackbox.rs  build_info.rs  execute.rs  foreign_calls.rs  js_transforms.rs  lib.rs  logging.rs  merkle.rs  pedersen.rs  public_witness.rs  scalar_mul.rs  schnorr.rs
src/barretenberg/: barretenberg_structures.rs  mod.rs  pedersen.rs  scalar_mul.rs  schnorr.rs
src/execute/: merkle.rs
src/foreign_call/: inputs.rs  outputs.rs
test/browser/: abi_encode.test.ts  execute_circuit.test.ts  witness_conversion.test.ts
test/browser/boilerplate/: index.ts  my_element.ts
test/node/: execute_circuit.test.ts
test/noir/pedersen/: Prover.toml
test/noir/pedersen/src/: main.nr
test/noir/scalar_mul/src/: main.nr
test/shared/: foreign_call.ts  noir_program.ts  schnorr_verify.ts  witness_compression.ts
