[package]
name = "acvm-simulator"
version = "0.0.0" # x-release-please-version
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
acvm = "0.11.0"
iter-extended = { git = "https://github.com/noir-lang/noir", rev = "ecc880648e7cccc83dce375af0e4fce886a1688d"}
noirc_abi = { git = "https://github.com/noir-lang/noir", rev = "ecc880648e7cccc83dce375af0e4fce886a1688d"}
wasm-bindgen = { version = "0.2.85", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3.62"

[build-dependencies]
build-data = "0.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.35"

[patch.crates-io]
acvm = { git = "https://github.com/noir-lang/acvm", rev = "eeddcf179880f246383f7f67a11e589269c4e3ff" }